Use the new classes instead of old one