@@ -5,9 +5,16 @@ import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.HashSet;
 import java.util.Set;
+import java.util.function.BiConsumer;
+import java.util.function.Predicate;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
+
+import io.jenkins.infra.repository_permissions_updater.hosting.condition.PomFileExistsCondition;
+import io.jenkins.infra.repository_permissions_updater.hosting.model.HostingRequest;
+import io.jenkins.infra.repository_permissions_updater.hosting.model.VerificationMessage;
+import io.jenkins.infra.repository_permissions_updater.hosting.model.Version;
+import io.jenkins.infra.repository_permissions_updater.hosting.verify.*;
 import org.apache.commons.lang3.StringUtils;
 import org.javatuples.Triplet;
 import org.kohsuke.github.GHContent;
@@ -29,6 +36,14 @@ public class HostingChecker {
 
     public static final Version LOWEST_JENKINS_VERSION = new Version(2, 440, 3);
 
+    private static final boolean DEBUG_HOSTING = Boolean.getBoolean("debugHosting");
+    public static final String INITIAL_HOSTING_REQUEST_FEEDBACK = """
+            It appears you have some issues with your hosting request. Please see the list below and \
+            correct all issues marked Required. Your hosting request will not be \
+            approved until these issues are corrected. Issues marked with Warning \
+            or Info are just recommendations and will not stall the hosting process.
+            """;
+
     public static void main(String[] args) throws IOException {
         new HostingChecker().checkRequest(Integer.parseInt(args[0]));
     }
@@ -37,26 +52,24 @@ public class HostingChecker {
         boolean hasBuildSystem = false;
         HashSet<VerificationMessage> hostingIssues = new HashSet<>();
 
-        boolean debug = System.getProperty("debugHosting", "false").equalsIgnoreCase("true");
-
-        ArrayList<Triplet<String, Verifier, ConditionChecker>> verifications = new ArrayList<>();
-        verifications.add(Triplet.with("Jira", new HostingFieldVerifier(), null));
-        verifications.add(Triplet.with("GitHub", new GitHubVerifier(), null));
-        verifications.add(Triplet.with("Maven", new MavenVerifier(), new FileExistsConditionChecker("pom.xml")));
-        verifications.add(Triplet.with("JenkinsProjectUsers", new JenkinsProjectUserVerifier(), null));
+        ArrayList<Triplet<String, BiConsumer<HostingRequest, HashSet<VerificationMessage>>, Predicate<HostingRequest>>> verifications = new ArrayList<>();
+        verifications.add(Triplet.with("Jira", new HostingFieldVerifierConsumer(), null));
+        verifications.add(Triplet.with("GitHub", new GitHubVerifierConsumer(), null));
+        verifications.add(Triplet.with("Maven", new MavenVerifierConsumer(), new PomFileExistsCondition()));
+        verifications.add(Triplet.with("JenkinsProjectUsers", new JenkinsProjectUserVerifierConsumer(), null));
 
         final HostingRequest hostingRequest = HostingRequestParser.retrieveAndParse(issueID);
 
-        for (Triplet<String, Verifier, ConditionChecker> verifier : verifications) {
+        for (Triplet<String, BiConsumer<HostingRequest, HashSet<VerificationMessage>>, Predicate<HostingRequest>> verifier : verifications) {
             try {
-                boolean runIt = verifier.getValue2() == null || verifier.getValue2().checkCondition(hostingRequest);
+                boolean runIt = verifier.getValue2() == null || verifier.getValue2().test(hostingRequest);
                 if (runIt) {
                     LOGGER.info("Running verification '" + verifier.getValue0() + "'");
-                    verifier.getValue1().verify(hostingRequest, hostingIssues);
+                    verifier.getValue1().accept(hostingRequest, hostingIssues);
                 }
 
-                if (verifier.getValue1() instanceof BuildSystemVerifier) {
-                    hasBuildSystem |= ((BuildSystemVerifier) verifier.getValue1()).hasBuildFile(hostingRequest);
+                if (verifier.getValue1() instanceof MavenVerifierConsumer mavenVerifierConsumer) {
+                    hasBuildSystem |= mavenVerifierConsumer.hasBuildFile(hostingRequest);
                 }
             } catch (Exception e) {
                 LOGGER.error("Error running verification '" + verifier.getValue0(), e);
@@ -72,24 +85,27 @@ public class HostingChecker {
         StringBuilder msg = new StringBuilder("Hello from your friendly Jenkins Hosting Checker\n\n");
         LOGGER.info("Checking if there were errors");
         if (!hostingIssues.isEmpty()) {
-            msg.append("It appears you have some issues with your hosting request. Please see the list below and "
-                    + "correct all issues marked Required. Your hosting request will not be "
-                    + "approved until these issues are corrected. Issues marked with Warning "
-                    + "or Info are just recommendations and will not stall the hosting process.\n");
+            msg.append(INITIAL_HOSTING_REQUEST_FEEDBACK);
             LOGGER.info("Appending issues to msg");
             appendIssues(msg, hostingIssues, 1);
-            msg.append("\nYou can re-trigger a check by editing your hosting request or by commenting `/hosting re-check`");
+            msg.append("""
+
+                    You can re-trigger a check by editing your hosting request or by commenting `/hosting re-check`""");
         } else {
-            msg.append("It looks like you have everything in order for your hosting request. "
-                    + "A member of the [Jenkins hosting team](https://www.jenkins.io/project/teams/hosting/#members-of-the-hosting-team) "
-                    + "will check over things that I am not able to check"
-                    + "(code review, README content, etc) and process the request as quickly as possible. "
-                    + "Thank you for your patience.\n")
-                    .append("\nHosting team members can host this request with `/hosting host`");
+            msg.append("""
+                            It looks like you have everything in order for your hosting request. \
+                            A member of the [Jenkins hosting team](https://www.jenkins.io/project/teams/hosting/#members-of-the-hosting-team) \
+                            will check over things that I am not able to check\
+                            (code review, README content, etc) and process the request as quickly as possible. \
+                            Thank you for your patience.
+                            """)
+                    .append("""
+
+                            Hosting team members can host this request with `/hosting host`""");
         }
 
         LOGGER.info(msg.toString());
-        if (!debug) {
+        if (!DEBUG_HOSTING) {
             GitHub github = GitHub.connect();
             GHIssue issue = github.getRepository(HOSTING_REPO_SLUG).getIssue(issueID);
             issue.comment(msg.toString());
@@ -108,7 +124,7 @@ public class HostingChecker {
     }
 
     private void appendIssues(StringBuilder msg, Set<VerificationMessage> issues, int level) {
-        for (VerificationMessage issue : issues.stream().sorted(Comparator.reverseOrder()).collect(Collectors.toList())) {
+        for (VerificationMessage issue : issues.stream().sorted(Comparator.reverseOrder()).toList()) {
             if (level == 1) {
                 msg.append("%s %s %s: %s%n".formatted(StringUtils.repeat("*", level), issue.getSeverity().getColor(), issue.getSeverity().getMessage(), issue.getMessage()));
             } else {
@@ -124,7 +140,7 @@ public class HostingChecker {
     public static boolean fileExistsInRepo(HostingRequest issue, String fileName) throws IOException {
         boolean res = false;
         GitHub github = GitHub.connect();
-        String forkFrom = issue.getRepositoryUrl();
+        String forkFrom = issue.repositoryUrl();
         if (StringUtils.isNotBlank(forkFrom)) {
             Matcher m = Pattern.compile("https://github\\.com/(\\S+)/(\\S+)", CASE_INSENSITIVE).matcher(forkFrom);
             if (m.matches()) {
